# CAV-20-21

./: README.md
deliverable 1/: CMakeLists.txt  Doxyfile  Video_Player.cpp  Video_Player.h  hist.txt  point1.cpp  point2.cpp  point3.cpp  point3_420.cpp  point3_422.cpp  point3_444.cpp  point4.cpp  point5.cpp  point6.cpp  point7.cpp
deliverable 1/docs/html/: Video__Player_8cpp.html  Video__Player_8cpp__incl.dot  Video__Player_8cpp__incl.md5  Video__Player_8h_source.html  annotated.html  classSndfileHandle-members.html  classSndfileHandle.html  classes.html  dir_16118e255a85083d09415381158c4867.html  dir_6c24254bfcd0bf0c016c9474000e5b59.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a7b8a9c5edf90788926b36eafc45abeb.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  point1_8cpp.html  point1_8cpp__incl.dot  point2_8cpp.html  point2_8cpp__incl.dot  point4_8cpp.html  point4_8cpp__incl.dot  point5_8cpp.html  point5_8cpp__incl.dot  point6_8cpp.html  point6_8cpp__incl.dot  point7_8cpp.html  point7_8cpp__incl.dot  sndfile_8hh_source.html
deliverable 1/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
deliverable 1/docs/latex/: annotated.tex  classSndfileHandle.tex  files.tex  point1_8cpp.tex  point1_8cpp.tex.tmp  point1_8cpp__incl.dot  point2_8cpp.tex  point2_8cpp__incl.dot  point4_8cpp.tex  point4_8cpp__incl.dot  point5_8cpp.tex  point5_8cpp__incl.dot  point6_8cpp.tex  point6_8cpp.tex.tmp  point6_8cpp__incl.dot  point7_8cpp.tex  point7_8cpp__incl.dot  refman.tex
deliverable 2/: BitStream_Read.cpp  BitStream_Read.h  BitStream_Write.cpp  BitStream_Write.h  CMakeLists.txt  Doxyfile  GolombDecoder.cpp  GolombDecoder.h  GolombEncoder.cpp  GolombEncoder.h  main_test.cpp  point1.cpp  point2.cpp  test_BitStream.cpp  test_Golomb.cpp
deliverable 2/docs/html/: BitStream__Read_8h.html  BitStream__Read_8h__incl.dot  BitStream__Read_8h_source.html  BitStream__Write_8h.html  BitStream__Write_8h__incl.dot  BitStream__Write_8h_source.html  GolombDecoder_8h_source.html  GolombEncoder_8h_source.html  annotated.html  classBitStream__Read-members.html  classBitStream__Read.html  classBitStream__Write-members.html  classBitStream__Write.html  classGolombDecoder-members.html  classGolombDecoder.html  classGolombEncoder-members.html  classGolombEncoder.html  classes.html  dir_16118e255a85083d09415381158c4867.html  dir_6c24254bfcd0bf0c016c9474000e5b59.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a7b8a9c5edf90788926b36eafc45abeb.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
deliverable 2/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
deliverable 2/docs/latex/: BitStream__Read_8h.tex  BitStream__Read_8h.tex.tmp  BitStream__Read_8h__incl.dot  BitStream__Write_8h.tex  BitStream__Write_8h.tex.tmp  BitStream__Write_8h__incl.dot  annotated.tex  classBitStream__Read.tex  classBitStream__Write.tex  classGolombDecoder.tex  classGolombEncoder.tex  files.tex  refman.tex
deliverable 3/: AudioCodec.cpp  AudioCodec.h  BitStream_Read.cpp  BitStream_Write.cpp  CMakeLists.txt  Doxyfile  GolombDecoder.cpp  GolombDecoder.h  GolombEncoder.cpp  GolombEncoder.h  hist.txt  hist_decoded.txt  hist_res_3.txt  inFileHistogram_lossy.txt  outFileHistogram.txt  point14.cpp  point15.cpp  residualHistogram.txt  residualHistogram_lossless.txt  residualHistogram_lossy.txt  sample01.cmp  sample01.flac  sample02.cmp  testGolomb.cpp  testMparameter.cpp  testeCodec.cpp
deliverable 3/docs/html/: AudioCodec_8h_source.html  BitStream__Read_8h_source.html  BitStream__Write_8h_source.html  GolombDecoder_8h_source.html  GolombEncoder_8h_source.html  annotated.html  classAudioCodec-members.html  classAudioCodec.html  classBitStream__Read-members.html  classBitStream__Read.html  classBitStream__Write-members.html  classBitStream__Write.html  classGolombDecoder-members.html  classGolombDecoder.html  classGolombEncoder-members.html  classGolombEncoder.html  classes.html  dir_16118e255a85083d09415381158c4867.html  dir_6c24254bfcd0bf0c016c9474000e5b59.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a7b8a9c5edf90788926b36eafc45abeb.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  graph_legend.html  index.html  menudata.js  point14_8cpp.html  point14_8cpp__incl.dot  point15_8cpp.html  point15_8cpp__incl.dot  testeCodec_8cpp.html  testeCodec_8cpp__incl.dot
deliverable 3/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js
deliverable 3/docs/latex/: annotated.tex  classAudioCodec.tex  classBitStream__Read.tex  classGolombDecoder.tex  classGolombEncoder.tex  files.tex  point14_8cpp.tex  point14_8cpp.tex.tmp  point14_8cpp__incl.dot  point15_8cpp.tex  point15_8cpp__incl.dot  refman.tex  testeCodec_8cpp.tex  testeCodec_8cpp__incl.dot
deliverable 4/intra+inter+loss_all/: CMakeLists.txt  VideoCodec.cpp  VideoCodec.h  testeCodec.cpp  testeCodecIntra.cpp
examples/audio/: CMakeLists.txt
examples/classes/: CMakeLists.txt  Img.h  example.cpp  live.avi  main.cpp  opencv.cpp  player.cpp  video.cpp
examples/video/: CMakeLists.txt  PlayerYUV444.cpp
(+191 files in other folders)
